system/argocd/resources/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  virtualhost:
    fqdn: argocd.mgmt.cedille.club
    tls:
      secretName: argocd-tls
  routes:
  - conditions:
    - header:
        contains: application/grpc
        name: Content-Type
    services:
    - name: argocd-server
      port: 80
      protocol: h2c
  - services:
    - name: argocd-server
      port: 80
